@@ -32,17 +32,15 @@ jobs:
         type: string
         default: "latest"
     docker:
-      - image: cimg/python:<< parameters.v >>
+      - image: cimg/python:3.14
     steps: &steps
       - checkout
-      - run: |
-          pwd
-          ls
-          pip install --upgrade pip
-          pip install --upgrade pytest
-          pip install --upgrade --force-reinstall setuptools
-          pip install gunicorn==23.0.0
-          pip install huckle
-          pip install -r requirements.txt
-          pip install -e .
-          python -m pytest -v
+      - run:
+          name: Install tox + docker (if needed)
+          command: |
+            pip install --upgrade pip
+            pip install tox tox-docker
+
+      - run:
+          name: Run tox for this Python version
+          command: tox -e py${<< parameters.v >>//./}
