@@ -1,0 +1,56 @@
+# tox.ini
+[tox]
+env_list = py38, py39, py310, py311, py312, py313, py314
+skipsdist = true
+requires = tox-docker>=5.0
+min_version = 4.0
+
+[testenv]
+description = Test in containerized environment matching CircleCI (cimg/python:{env:PY_VER})
+allowlist_externals = docker
+deps =
+    pytest
+commands =
+    pip install --upgrade pip --quiet
+    pip install --upgrade pytest --quiet
+    pip install --upgrade --force-reinstall setuptools --quiet
+    pip install gunicorn==23.0.0 --quiet
+    pip install huckle --quiet
+    pip install -r requirements.txt --quiet
+    pip install -e . --quiet
+    python -m pytest -v -q
+
+[docker:py38-container]
+image = cimg/python:3.8
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py39-container]
+image = cimg/python:3.9
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py310-container]
+image = cimg/python:3.10
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py311-container]
+image = cimg/python:3.11
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py312-container]
+image = cimg/python:3.12
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py313-container]
+image = cimg/python:3.13
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
+
+[docker:py314-container]
+image = cimg/python:3.14
+volumes = bind:rw:{toxinidir}:/home/circleci/project
+workdir = /home/circleci/project
